--- a/views/project/print.htm
+++ b/views/project/print.htm
@@ -35,6 +35,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 hidden-print"><input type="button"  class="btn btn-primary" onclick=" print('print-wts')" value="打印"></div>
+                <div class="col-md-4 hidden-print"><a class="btn btn-default" href="{{ back_url }}" role="button">{{ 'backend::lang.form.cancel' | trans }}</a></div>
             </div>
 
         </div>
@@ -59,6 +60,7 @@
                     </div>
                 </div>
                 <div class="col-md-4 hidden-print"><input type="button"  class="btn btn-primary" onclick=" print('print-jkcns')" value="打印"></div>
+                <div class="col-md-4 hidden-print"><a class="btn btn-default" href="{{ back_url }}" role="button">{{ 'backend::lang.form.cancel' | trans }}</a></div>
             </div>
 
         </div>
@@ -71,7 +73,7 @@
                     </div>
 
                     <div class="control-list" >
-                        <p class="text-right">申请日期：<u>&nbsp;&nbsp;{{ date_now }}&nbsp;&nbsp;</u></p>
+                        <p class="text-right">申请日期：<u>&nbsp;&nbsp;{{ apply_date }}&nbsp;&nbsp;</u></p>
                         <table id="kssq-review" class="table table-bordered">
                             <tbody>
                             <tr>
@@ -126,7 +128,7 @@
                                     <p class="text-left">区县分中心（盖章）：</p>
                                     <p></p>
                                     <p class="text-right">经办人签字：_______________________</p>
-                                    <p class="text-right">________年_____月_____日</p>
+                                    <p class="text-right">_____________________</p>
                                 </td>
                             </tr>
                             <tr>
@@ -141,6 +143,7 @@
 
                 </div>
                 <div class="col-md-4 hidden-print"><input type="button"  class="btn btn-primary" onclick=" print('print-kssq-review')" value="打印"></div>
+                <div class="col-md-4 hidden-print"><a class="btn btn-default" href="{{ back_url }}" role="button">{{ 'backend::lang.form.cancel' | trans }}</a></div>
             </div>
             {% else %}
             <div class="row" id="print-kssq-new">
@@ -150,7 +153,7 @@
                     </div>
 
                     <div class="control-list" >
-                        <p class="text-right">申请日期：<u>&nbsp;&nbsp;{{ date_now }}&nbsp;&nbsp;</u></p>
+                        <p class="text-right">申请日期：<u>&nbsp;&nbsp;{{ apply_date }}&nbsp;&nbsp;</u></p>
                         <table class="table table-bordered" id="kssq-new" >
                             <tbody>
                             <tr>
@@ -199,7 +202,7 @@
                                     <p class="text-left">区县分中心（盖章）：</p>
                                     <p></p>
                                     <p class="text-right">经办人签字：_______________________</p>
-                                    <p class="text-right">________年_____月_____日</p>
+                                    <p class="text-right">_____________________</p>
                                 </td>
                             </tr>
                             <tr>
@@ -214,6 +217,7 @@
 
                 </div>
                 <div class="col-md-4 hidden-print"><input type="button"  class="btn btn-primary" onclick=" print('print-kssq-new')" value="打印"></div>
+                <div class="col-md-4 hidden-print"><a class="btn btn-default" href="{{ back_url }}" role="button">{{ 'backend::lang.form.cancel' | trans }}</a></div>
             </div>
 
             {% endif %}
@@ -221,13 +225,6 @@
         </div>
     </div>
 </div>
-
-
-<span class="btn-text">
-    <a href="{{ url }}">
-        {{ 'backend::lang.form.cancel' | trans }}
-    </a>
-</span>
 
 
 <script language="javascript">
