--- a/components/recordform/certificate.htm
+++ b/components/recordform/certificate.htm
@@ -1,3 +1,4 @@
+<div class="section">
 <div class="input-field col s12">
     <div class="card">
         <div class="card-content">
@@ -21,4 +22,5 @@
             </div>
         </div>
     </div>
+</div>
 </div>
