--- a/components/checkout/default.htm
+++ b/components/checkout/default.htm
@@ -1,63 +1,73 @@
-<div class="container">
-    <div class="row">
+<div class="card  hoverable">
+    <div class="card-content" id="result">
         <form action="" data-request="onCheckout" data-request-redirect="/{{ successPage }}">
-            <div class="col-md-6">
-                <h2>Billing Address</h2>
-                <div class="form-group">
-                    <input type="text" required="true" name="billing[name]" class="form-control" placeholder="Name">
+            <div class="row">
+                <div class="col s12 m6">
+                   <span class="card-title">发票信息</span>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">account_box</i>
+                            <label for="billing_name" class="col-lg-2 control-label">发票姓名 <span class="red-text">*</span></label>
+                            <input type="text" class="form-control validate" id="billing_name" name="billing[name]"  >
+                            <span data-validate-for="billing_name" class="red-text helper-text"></span>
+                        </div>
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">email</i>
+                            <label for="billing_email" class="col-lg-2 control-label">电子邮件地址 <span class="red-text">*</span></label>
+                            <input type="text" class="form-control validate" id="billing_email" name="billing[email]"  >
+                            <span data-validate-for="billing_email" class="red-text helper-text">接收电子发票</span>
+                        </div>
+                        <div class="input-field col s12" >
+                            <i class="material-icons prefix">book</i>
+                            <input type="text" name="billing[province_city_district]" data-toggle="city-picker" value="" placeholder="点击从下拉面板中选择省/市/区" class="" id="province_city_district" style="width: 300px;">
+                        </div>
+                        <div class="input-field col s12">
+                                <i class="material-icons prefix">local_airport</i>
+                                <label for="billing_address" class="col-lg-2 control-label">详细地址 <span class="red-text">*</span></label>
+                                <input type="text" class="form-control validate" id="billing_address" name="billing[address]">
+                                <span data-validate-for="billing_address" class="red-text helper-text"></span>
+                        </div>
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">mail_outline</i>
+                            <label for="billing_zip" class="col-lg-2 control-label"> 邮政编码<span class="red-text">*</span></label>
+                            <input type="text" class="form-control validate" id="billing_zip" name="billing[zip]" >
+                            <span data-validate-for="billing_zip" class="red-text helper-text"></span>
+                        </div>
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">phone</i>
+                            <label for="billing_phone" class="col-lg-2 control-label">联系电话<span class="red-text">*</span></label>
+                            <input type="text" class="form-control validate" id="billing_phone" name="billing[phone]">
+                            <span data-validate-for="billing_phone" class="red-text helper-text"></span>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <input type="text" required="true" name="billing[email]" class="form-control" placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="billing[phone]" class="form-control" placeholder="Phone">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="billing[address]" class="form-control" placeholder="Address">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="billing[town]" class="form-control" placeholder="Town">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="billing[country]" class="form-control" placeholder="Country">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="billing[postcode]" class="form-control" placeholder="Post Code">
+                <div class="col s12 m6">
+                    <span class="card-title">收件信息</span>
+                    <div class="row">
+                        <div class="input-field col s12">
+                            <i class="material-icons prefix">book</i>
+                            <select id="address" name="address_id">
+                                <option disabled >选择你收货地址...</option>
+                                {% for id,address in userAddresses %}
+                                <option value="{{ address.id }}" {{ last_use.id==address.id ? "selected" : "" }}>{{ address.full_address }}</option>
+                                {% endfor %}
+                            </select>
+                            <label for="address">收货地址<span class="red-text">*</span></label>
+                        </div>
+                        <div class="input-field col s12">
+                            <label>
+                                <input type="checkbox" id="copy_address" name="copy_address" value="1" checked>
+                                <span> 使用与发票相同的地址</span>
+                            </label>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="col-md-6">
-                <h2>Shipping Address</h2>
-                <div class="form-group">
-                    <input type="text" name="shipping[name]" class="form-control" placeholder="Name">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="shipping[email]" class="form-control" placeholder="Email">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="shipping[phone]" class="form-control" placeholder="Phone">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="shipping[address]" class="form-control" placeholder="Address">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="shipping[town]" class="form-control" placeholder="Town">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="shipping[country]" class="form-control" placeholder="Country">
-                </div>
-                <div class="form-group">
-                    <input type="text" name="shipping[postcode]" class="form-control" placeholder="Post Code">
-                </div>
-                <div class="form-group">
-                    <label>
-                        <input type="checkbox" id="copy_address"> Same as billing address
-                    </label>
-                </div>
-
-                <div class="text-right">
-                    <button class="btn btn-success" type="submit">Submit order</button>
-                </div>
+            <div class="card-action">
+                <button data-attach-loading class="btn waves-effect waves-light btn-large" type="submit" name="action">提交订单
+                    <i class="material-icons right">send</i>
+                </button>
             </div>
         </form>
     </div>
