--- a/components/checkout/default.htm
+++ b/components/checkout/default.htm
@@ -1,66 +1,98 @@
 <div class="card  hoverable">
     <div class="card-content" id="result">
-        <form action="" data-request="onCheckout" data-request-redirect="/{{ successPage }}">
+        <form action="" data-request="onCheckout" data-request-redirect="{{ successPage|page }}">
             <div class="row">
                 <div class="col s12 m6">
-                   <span class="card-title">发票信息</span>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">account_box</i>
-                            <label for="billing_name" class="col-lg-2 control-label">发票姓名 <span class="red-text">*</span></label>
-                            <input type="text" class="form-control validate" id="billing_name" name="billing[name]"  >
-                            <span data-validate-for="billing_name" class="red-text helper-text"></span>
+                    <div class="card">
+                        <div class="card-content" >
+                            <div class="input-field col s12">
+                                <span class="card-title">支付方式</span>
+                                {% partial __SELF__ ~ '::payment' availableGateways=availableGateways %}
+                            </div>
+                            <span class="card-title">发票信息</span>
+                            <label>
+                                <input name="billing[need]" type="radio" id="billing_need" value="0" checked/>
+                                <span>我不需要开具发票</span>
+                            </label>
+                            <label>
+                                <input name="billing[need]" type="radio" id="billing_not_need" value="1"/>
+                                <span>我需要开具发票，并填写发票信息</span>
+                            </label>
+                            <ul class="collapsible">
+                                <li>
+                                    <div class="collapsible-header">
+                                        填写发票信息
+                                    </div>
+                                    <div class="collapsible-body">
+                                        <div class="row">
+                                            <div class="input-field col s12">
+                                                <i class="material-icons prefix">account_box</i>
+                                                <label for="billing_name" class="col-lg-2 control-label">姓名 <span class="red-text">*</span></label>
+                                                <input type="text" class="form-control validate" id="billing_name" name="billing[name]"  >
+                                                <span data-validate-for="billing_name" class="red-text helper-text"></span>
+                                            </div>
+                                            <div class="input-field col s12">
+                                                <i class="material-icons prefix">phone</i>
+                                                <label for="billing_phone" class="col-lg-2 control-label">联系电话 <span class="red-text">*</span></label>
+                                                <input type="text" class="form-control validate" id="billing_phone" name="billing[phone]"  >
+                                                <span data-validate-for="billing_phone" class="red-text helper-text"></span>
+                                            </div>
+                                            <div class="input-field col s12">
+                                                <i class="material-icons prefix">email</i>
+                                                <label for="billing_email" class="col-lg-2 control-label">电子邮件地址 <span class="red-text">*</span></label>
+                                                <input type="text" class="form-control validate" id="billing_email" name="billing[email]"  >
+                                                <span data-validate-for="billing_email" class="red-text helper-text"></span>
+                                            </div>
+                                            <div class="input-field col s12">
+                                                <i class="material-icons prefix">account_balance</i>
+                                                <label for="billing_company" class="col-lg-2 control-label">单位名称 <span class="red-text">*</span></label>
+                                                <input type="text" class="form-control validate" id="billing_company" name="billing[company]">
+                                                <span data-validate-for="billing_company" class="red-text helper-text"></span>
+                                            </div>
+                                            <div class="input-field col s12">
+                                                <i class="material-icons prefix">spa</i>
+                                                <label for="billing_tax_number" class="col-lg-2 control-label">税务号 <span class="red-text">*</span></label>
+                                                <input type="text" class="form-control validate" id="billing_tax_number" name="billing[tax_number]">
+                                                <span data-validate-for="billing_tax_number" class="red-text helper-text"></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">email</i>
-                            <label for="billing_email" class="col-lg-2 control-label">电子邮件地址 <span class="red-text">*</span></label>
-                            <input type="text" class="form-control validate" id="billing_email" name="billing[email]"  >
-                            <span data-validate-for="billing_email" class="red-text helper-text">接收电子发票</span>
-                        </div>
-                        <div class="input-field col s12" >
-                            <i class="material-icons prefix">book</i>
-                            <input type="text" name="billing[province_city_district]" data-toggle="city-picker" value="" placeholder="点击从下拉面板中选择省/市/区" class="" id="province_city_district" style="width: 300px;">
-                        </div>
-                        <div class="input-field col s12">
-                                <i class="material-icons prefix">local_airport</i>
-                                <label for="billing_address" class="col-lg-2 control-label">详细地址 <span class="red-text">*</span></label>
-                                <input type="text" class="form-control validate" id="billing_address" name="billing[address]">
-                                <span data-validate-for="billing_address" class="red-text helper-text"></span>
-                        </div>
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">mail_outline</i>
-                            <label for="billing_zip" class="col-lg-2 control-label"> 邮政编码<span class="red-text">*</span></label>
-                            <input type="text" class="form-control validate" id="billing_zip" name="billing[zip]" >
-                            <span data-validate-for="billing_zip" class="red-text helper-text"></span>
-                        </div>
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">phone</i>
-                            <label for="billing_phone" class="col-lg-2 control-label">联系电话<span class="red-text">*</span></label>
-                            <input type="text" class="form-control validate" id="billing_phone" name="billing[phone]">
-                            <span data-validate-for="billing_phone" class="red-text helper-text"></span>
+                    </div>
+
+                </div>
+                <div class="col s12 m6">
+                    <div class="card">
+                        <div class="card-content" >
+
+                            <div class="row">
+                                <span class="card-title">领证方式</span>
+                                <div class="input-field col s12">
+                                    {% partial __SELF__ ~ '::shipping' availableMethods=availableMethods %}
+                                </div>
+                                <span class="card-title">收件信息</span>
+                                <div class="input-field col s12">
+
+                                    <i class="material-icons prefix">book</i>
+                                    <select id="address" name="address_id">
+                                        <option disabled >选择你收货地址...</option>
+                                        {% for id,address in userAddresses %}
+                                        <option value="{{ address.id }}" {{ last_use.id==address.id ? "selected" : "" }}>{{ address.full_address }}</option>
+                                        {% endfor %}
+                                    </select>
+                                    <label for="address">收货地址<span class="red-text">*</span></label>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m6">
-                    <span class="card-title">收件信息</span>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <i class="material-icons prefix">book</i>
-                            <select id="address" name="address_id">
-                                <option disabled >选择你收货地址...</option>
-                                {% for id,address in userAddresses %}
-                                <option value="{{ address.id }}" {{ last_use.id==address.id ? "selected" : "" }}>{{ address.full_address }}</option>
-                                {% endfor %}
-                            </select>
-                            <label for="address">收货地址<span class="red-text">*</span></label>
-                        </div>
-                        <div class="input-field col s12">
-                            <label>
-                                <input type="checkbox" id="copy_address" name="copy_address" value="1" checked>
-                                <span> 使用与发票相同的地址</span>
-                            </label>
-                        </div>
-                    </div>
+                <div class="input-field col s12">
+                    <textarea id="note" class="materialize-textarea" name="note"></textarea>
+                    <label for="note">备注信息</label>
+                    <span class="helper-text" data-error="wrong" data-success="right">如有其他需要特别注明的内容请填此处</span>
                 </div>
             </div>
 
