--- a/components/order/default.htm
+++ b/components/order/default.htm
@@ -1,47 +1,44 @@
 {% set order = __SELF__.order %}
-{% set items = __SELF__.items %}
-<div class="spacer"></div>
-<div class="container">
-    <div class="row">
-        <div class="col-md-10 col-md-offset-1"><h1>Order №{{ order.id }}</h1></div>
-    </div>
+{% set items = __SELF__.cartItems %}
+
+<span class="card-title">订单编号 №{{ order.no }}</span>
     {% if not items is empty %}
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <table class="table table-striped">
                     <thead>
                     <tr>
-                        <th>Image</th>
-                        <th>Product</th>
-                        <th>Price</th>
-                        <th>Quantity</th>
+                        <th>照片</th>
+                        <th>申请资料</th>
+                        <th>价格</th>
+                        <th>数量</th>
                     </tr>
                     </thead>
                     {% for itemId, item in items %}
-                        {% set product = item.product %}
+                        {% set project = item.project %}
                         {% set quantity = item.quantity %}
                         {% set price = item.price %}
-                        {% set attributes = item.attributes %}
+                        {% set attributes = item.attributes['attributesShow'] %}
                         <tr>
                             <td style="width: 166px;">
-                                {% if product.images.count %}
-                                    {% for image in product.images|slice(0, 1) %}
+                                {% if project.images.count %}
+                                    {% for image in project.images|slice(0, 1) %}
                                         <img data-src="{{ image.filename }}"
                                              src="{{ image.path }}"
                                              class="img-responsive"
                                              style="max-width: 150px;"
-                                             alt="{{ product.title }}" />
+                                             alt="{{ project.title }}" />
                                     {% endfor %}
                                 {% else %}
-                                    <img src="http://placehold.it/150x150" class="img-responsive" alt="{{ product.title }}">
+                                    <img src="http://placehold.it/150x150" class="img-responsive" alt="{{ project.title }}">
                                 {% endif %}
                             </td>
                             <td>
-                                <p><strong><a href="{{ product.url }}">{{ product.title }}</a></strong></p>
+                                <p><strong><a href="{{ project.url }}">{{ project.title }}</a></strong></p>
 
                                 <p>
-                                    {% if product.categories.count %}
-                                        {% for category in product.categories %}
+                                    {% if project.categories.count %}
+                                        {% for category in project.categories %}
                                             <a href="{{ category.url }}">{{ category.title }}</a>{% if not loop.last %}, {% endif %}
                                         {% endfor %}
                                     {% endif %}
@@ -49,7 +46,7 @@
 
                                 {% if attributes is not empty %}
                                     {% for name, value in attributes %}
-                                        <strong>{{ name }}:</strong>&nbsp;{{ value }}<br>
+                                        <strong>{{ value.label }}:</strong>&nbsp;{{ value.value }}<br>
                                     {% endfor %}
                                 {% endif %}
                             </td>
@@ -61,8 +58,8 @@
                     <tr>
                         <td colspan="5">
                             <p class="text-right">
-                                <strong>Total price: {{ order.total|price() }}</strong><br>
-                                Total VAT: {{ order.vat|price() }}<br>
+                                <strong>税价总和: {{ order.total|price() }}</strong><br>
+                                税额: {{ order.vat|price() }}<br>
                             </p>
                         </td>
                     </tr>
@@ -71,28 +68,37 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-5 col-md-offset-1">
-                <h2>Billing Info</h2>
-                {% if not order.billing_info is empty %}
-                    {% for row in order.billing_info %}
-                        {{ row.value }}<br>
-                    {% endfor %}
-                {% endif %}
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">发票信息</span>
+                        {% if not order.billing_info is empty  and order.billing_info.tax_number %}
+                            {% for row in order.billing_info %}
+                                {{ row.value }}<br>
+                            {% endfor %}
+                        {% else %}
+                        <p>无需开具发票</p>
+                        {% endif %}
+                    </div>
+                </div>
             </div>
-            <div class="col-md-5">
-                <h2>Shipping Info</h2>
-                {% if not order.shipping_info is empty %}
-                    {% for row in order.shipping_info %}
-                        {{ row.value }}<br>
-                    {% endfor %}
-                {% endif %}
+            <div class="col s12 m6">
+                <div class="card">
+                    <div class="card-content">
+                        <span class="card-title">物流信息</span>
+                        {% if not order.shipping_info is empty %}
+                            {% for row in order.shipping_info %}
+                                {{ row.value }}<br>
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+                </div>
             </div>
         </div>
     {% else %}
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <h3 class="text-center">Order not found!</h3>
+                <h6 class="text-center">Order not found!</h6>
             </div>
         </div>
     {% endif %}
-</div>
