--- a/components/orders/default.htm
+++ b/components/orders/default.htm
@@ -1,10 +1,8 @@
 {% if __SELF__.orders %}
-    <hr>
-        <h3>Orders</h3>
-        <ul class="order-list">
+        <ul class="collection with-header">
+            <li class="collection-header"><h4>你的所有订单</h4></li>
             {% partial __SELF__ ~ "::items"
             orders = __SELF__.orders
             %}
         </ul>
-    <hr>
 {% endif %}
