--- a/views/mail/order_confirm_admin.htm
+++ b/views/mail/order_confirm_admin.htm
@@ -5,11 +5,11 @@ Hi Admin,
 You recently received an order for {{ count }} items from your website, the details of which are as follows:
 
 {% for item in items %}
-    {% set product = item.product %}
+    {% set project = item.project %}
     {% set quantity = item.quantity %}
     {% set price = item.price %}
-    {% set attributes = item.attributes %}
-    {{ quantity }} x {{ product.title }} @ {{ price|price() }}
+    {% set attributes = item.attributes.attributesShow %}
+    {{ quantity }} x {{ project.title }} @ {{ price|price() }}
 {% endfor %}
 Order total: {{ total|price() }}
 Order VAT: {{ vat|price() }}
@@ -38,11 +38,11 @@ This email was sent automatically by OctoCart, the magic behind {{ site }}. Plea
 <p>You recently received an order for {{ count }} items from your website, the details of which are as follows:</p>
 
 {% for item in items %}
-    {% set product = item.product %}
+    {% set project = item.project %}
     {% set quantity = item.quantity %}
     {% set price = item.price %}
-    {% set attributes = item.attributes %}
-    {{ quantity }} x {{ product.title }} @ {{ price|price() }} <br/>
+    {% set attributes = item.attributes.attributesShow %}
+    {{ quantity }} x {{ project.title }} @ {{ price|price() }} <br/>
 {% endfor %}
 <p><strong>Order total: {{ total|price() }}</strong></p>
 <p><strong>Order VAT: {{ vat|price() }}</strong></p>
