--- a/components/checkout/default.htm
+++ b/components/checkout/default.htm
@@ -11,11 +11,11 @@
                             </div>
                             <span class="card-title">发票信息</span>
                             <label>
-                                <input name="billing[need]" type="radio" id="billing_need" value="0" checked/>
+                                <input name="billing[need]" type="radio" class="with-gap" id="billing_need" value="0" checked/>
                                 <span>我不需要开具发票</span>
                             </label>
                             <label>
-                                <input name="billing[need]" type="radio" id="billing_not_need" value="1"/>
+                                <input name="billing[need]" type="radio"  class="with-gap" id="billing_not_need" value="1"/>
                                 <span>我需要开具发票，并填写发票信息</span>
                             </label>
                             <ul class="collapsible">
