修改报名按钮

--- a/components/recordform/default.htm
+++ b/components/recordform/default.htm
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="card-action">
-                <button data-attach-loading class="btn waves-effect waves-light btn-large" type="submit" name="action">开始报名
+                <button data-attach-loading class="btn waves-effect waves-light btn-large" type="submit" name="action">下一步:创建订单
                     <i class="material-icons right">send</i>
                 </button>
             </div>
